# my-nome

./: .gitignore  bootstrap.sh  flake.nix
dockerfile/: Dockerfile_Unsafe_Derper
home-manager/: aliases.nix  bin.nix  default.nix  env.nix  gh.nix  git.nix  packages.nix  programs.nix  vim.nix  vscode.nix
home-manager/config/: .vimrc
home-manager/config/cpp/: .clang-format  .gitignore
home-manager/config/cpp/repo/: .clang-tidy  justfile  meson.build
home-manager/config/jj/: config.toml
home-manager/config/rust/: clippy.toml  install.sh  rust-toolchain.toml  rustfmt.toml
home-manager/config/rust/repo/: .gitignore  Cargo.toml
home-manager/config/ssh/: config
home-manager/config/vim/: .vimrc
home-manager/scripts/: init.sh
nix-darwin/base/: default.nix  system.nix
nix-darwin/config/: nix-darwin-daemon.py
nix-darwin/config/claude/: settings.json
nix-darwin/config/claude/agents/: code-auditor.md  rust-pro.md
nix-darwin/config/claude/commands/: exe-n.md  plan-n.md  rust-project.md  spec-n.md  task-n.md  update-claude-md.md
nix-darwin/config/karabiner/: karabiner.json
nix-darwin/config/vscode/: keybindings.json  settings.json
nix-darwin/homebrew/: install.sh  install_cn.sh
scripts/: init_cpp_repo.sh  init_rust_repo.sh  install_certbot.sh  install_determinate_nix.sh  install_docker_debian.sh  install_docker_ubuntu.sh  install_rustup_cn.sh  post_setup.sh  setup_vim_remote.sh  symlink.sh  symlink_cargo_conf.sh  symlink_claude_conf.sh  symlink_codex_conf.sh  symlink_karabiner_conf.sh  symlink_vscode_conf.sh
templates/: default.nix
(+22 files in other folders)
