[workspace]
members = []
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["nubiv <h.horace0921@gmail.com>"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = false
panic = "abort"

[profile.bench]
inherits = "release"
debug = true
